// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rename tests > config should handle arrays of patterns 1`] = `
{
  "duration": 0,
  "rules": [
    {
      "pattern": [
        "/test-frontmatter/**/*",
        "/test-basic/**/*",
      ],
      "report": {
        "dryRun": false,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test-basic/basic.md",
            "filePathRenamed": "/test-basic/glob (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/camelCaseFile.md",
            "filePathRenamed": "/test-basic/glob (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/kebab-case-file.md",
            "filePathRenamed": "/test-basic/glob (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/miXedC_aseF-ile.md",
            "filePathRenamed": "/test-basic/glob (4).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/Sentence case file.md",
            "filePathRenamed": "/test-basic/glob (5).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/snake_case_file.md",
            "filePathRenamed": "/test-basic/glob (6).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-frontmatter/frontmatter-1.md",
            "filePathRenamed": "/test-frontmatter/glob (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-frontmatter/frontmatter-2.md",
            "filePathRenamed": "/test-frontmatter/glob (2).md",
            "status": "renamed",
          },
        ],
      },
    },
  ],
}
`;

exports[`rename tests > should apply only the last matching rule in an array if a file matches multiple rules 1`] = `
{
  "duration": 0,
  "rules": [
    {
      "pattern": [
        "/**/*",
      ],
      "report": {
        "dryRun": false,
        "duration": 0,
        "files": [],
      },
    },
    {
      "pattern": [
        "/test-frontmatter/**/*",
      ],
      "report": {
        "dryRun": false,
        "duration": 0,
        "files": [],
      },
    },
    {
      "pattern": [
        "/**/*",
      ],
      "report": {
        "dryRun": false,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test-basic/basic.md",
            "filePathRenamed": "/test-basic/bar (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/camelCaseFile.md",
            "filePathRenamed": "/test-basic/bar (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/kebab-case-file.md",
            "filePathRenamed": "/test-basic/bar (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/miXedC_aseF-ile.md",
            "filePathRenamed": "/test-basic/bar (4).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/Sentence case file.md",
            "filePathRenamed": "/test-basic/bar (5).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/snake_case_file.md",
            "filePathRenamed": "/test-basic/bar (6).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/Basic (1).md",
            "filePathRenamed": "/test-increment/bar (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 1.md",
            "filePathRenamed": "/test-increment/bar (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/Basic (3).md",
            "filePathRenamed": "/test-increment/bar (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 2.md",
            "filePathRenamed": "/test-increment/bar (4).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 3.md",
            "filePathRenamed": "/test-increment/bar (5).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 4.md",
            "filePathRenamed": "/test-increment/bar (6).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 5.md",
            "filePathRenamed": "/test-increment/bar (7).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 6.md",
            "filePathRenamed": "/test-increment/bar (8).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 7.md",
            "filePathRenamed": "/test-increment/bar (9).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/Basic (10).md",
            "filePathRenamed": "/test-increment/bar (10).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 8.md",
            "filePathRenamed": "/test-increment/bar (11).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 9.md",
            "filePathRenamed": "/test-increment/bar (12).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 10.md",
            "filePathRenamed": "/test-increment/bar (13).md",
            "status": "renamed",
          },
        ],
      },
    },
    {
      "pattern": [
        "/test-frontmatter/**/*",
      ],
      "report": {
        "dryRun": false,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test-frontmatter/frontmatter-1.md",
            "filePathRenamed": "/test-frontmatter/baz (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-frontmatter/frontmatter-2.md",
            "filePathRenamed": "/test-frontmatter/baz (2).md",
            "status": "renamed",
          },
        ],
      },
    },
  ],
}
`;

exports[`rename tests > should rename recursively with per-directory increments 1`] = `
{
  "duration": 0,
  "rules": [
    {
      "pattern": [
        "/**/*",
      ],
      "report": {
        "dryRun": true,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test-basic/basic.md",
            "filePathRenamed": "/test-basic/bla (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/camelCaseFile.md",
            "filePathRenamed": "/test-basic/bla (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/kebab-case-file.md",
            "filePathRenamed": "/test-basic/bla (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/miXedC_aseF-ile.md",
            "filePathRenamed": "/test-basic/bla (4).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/Sentence case file.md",
            "filePathRenamed": "/test-basic/bla (5).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-basic/snake_case_file.md",
            "filePathRenamed": "/test-basic/bla (6).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-frontmatter/frontmatter-1.md",
            "filePathRenamed": "/test-frontmatter/bla (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-frontmatter/frontmatter-2.md",
            "filePathRenamed": "/test-frontmatter/bla (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/Basic (1).md",
            "filePathRenamed": "/test-increment/bla (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 1.md",
            "filePathRenamed": "/test-increment/bla (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/Basic (3).md",
            "filePathRenamed": "/test-increment/bla (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 2.md",
            "filePathRenamed": "/test-increment/bla (4).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 3.md",
            "filePathRenamed": "/test-increment/bla (5).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 4.md",
            "filePathRenamed": "/test-increment/bla (6).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 5.md",
            "filePathRenamed": "/test-increment/bla (7).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 6.md",
            "filePathRenamed": "/test-increment/bla (8).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 7.md",
            "filePathRenamed": "/test-increment/bla (9).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/Basic (10).md",
            "filePathRenamed": "/test-increment/bla (10).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 8.md",
            "filePathRenamed": "/test-increment/bla (11).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 9.md",
            "filePathRenamed": "/test-increment/bla (12).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test-increment/rename me 10.md",
            "filePathRenamed": "/test-increment/bla (13).md",
            "status": "renamed",
          },
        ],
      },
    },
  ],
}
`;

exports[`rename tests > should use the config file 1`] = `
{
  "duration": 0,
  "rules": [
    {
      "pattern": [
        "../assets/test-basic/**/*",
      ],
      "report": {
        "dryRun": true,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test/assets/test-basic/basic.md",
            "filePathRenamed": "/test/assets/test-basic/17-test.md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-basic/camelCaseFile.md",
            "filePathRenamed": "/test/assets/test-basic/18-test (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-basic/kebab-case-file.md",
            "filePathRenamed": "/test/assets/test-basic/18-test (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-basic/snake_case_file.md",
            "filePathRenamed": "/test/assets/test-basic/18-test (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-basic/Sentence case file.md",
            "filePathRenamed": "/test/assets/test-basic/21-test.md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-basic/miXedC_aseF-ile.md",
            "filePathRenamed": "/test/assets/test-basic/24-test.md",
            "status": "renamed",
          },
        ],
      },
    },
    {
      "pattern": [
        "../assets/test-frontmatter/**/*",
      ],
      "report": {
        "dryRun": true,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test/assets/test-frontmatter/frontmatter-1.md",
            "filePathRenamed": "/test/assets/test-frontmatter/note-hello-world.md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-frontmatter/frontmatter-2.md",
            "filePathRenamed": "/test/assets/test-frontmatter/note-some-title.md",
            "status": "renamed",
          },
        ],
      },
    },
    {
      "pattern": [
        "../assets/test-increment/**/*",
      ],
      "report": {
        "dryRun": true,
        "duration": 0,
        "files": [
          {
            "filePathOriginal": "/test/assets/test-increment/Basic (1).md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (1).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 1.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (2).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/Basic (3).md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (3).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 2.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (4).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 3.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (5).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 4.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (6).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 5.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (7).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 6.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (8).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 7.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (9).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/Basic (10).md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (10).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 8.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (11).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 9.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (12).md",
            "status": "renamed",
          },
          {
            "filePathOriginal": "/test/assets/test-increment/rename me 10.md",
            "filePathRenamed": "/test/assets/test-increment/wow-w... (13).md",
            "status": "renamed",
          },
        ],
      },
    },
  ],
}
`;
